fix: Navigation list size on mobile and tablet

--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -229,20 +229,22 @@ a.nav-text:hover {
 	
 	& ul.nav-list {
 		position: fixed;
-		right: 0;
+		right: 12.5%;
 		top: 4.2rem;
+		background: transparent;
 		background-color: var(--color-primary-light);
 		max-height: 70vh;
 		overflow-y: auto;
 		overflow-x: hidden;
 		padding: 0 0.5rem 0.5rem 0.5rem;
 		z-index: 100;
-		width: calc(60% - 1rem);
+		width: 40%;
 		box-shadow: 0 6px 10px -2px rgba(0,211,169,0.75);
 		-webkit-box-shadow: 0 6px 10px -2px rgba(0,211,169,0.75);
 		-moz-box-shadow: 0 6px 10px -2px rgba(0,211,169,0.75);
 		@media screen and (max-width: 448px) {
 			&{
+				right: 0;
 				left: 50%;
 				transform: translateX(-50%);
 				width: calc(100vw - 1rem);
